<?xml version="1.0" encoding="utf-8"?>
<resources>
finish();
    <string name="app_name">WoahPaper</string>
    <string name="action_settings">Settings</string>
    <string name="header_name">WOAHPAPER</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="submit_button">SIGN IN / REGISTER</string>
    <string name="send_botton">SEND WOAHPAPER</string>
    <string name="word_hint">WORD</string>
    <string name="recipient_hint">RECIPIENT USER</string>

</resources>
