<ScrollView style="@style/AppTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#99CC00">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/mainLayout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">
        <TextView
            style="@style/BlockTheme"
            android:background="#FFBB33"
            android:id="@+id/userTitleBox"/>
        <TextView
            style="@style/SpacerTheme"
            android:background="#FF8800"/>
        <EditText
            style="@style/FormTheme"
            android:hint="@string/recipient_hint"
            android:background="#FF4444"
            android:id="@+id/recipientBox"/>
        <TextView
            style="@style/SpacerTheme"
            android:background="#CC0000"/>
        <EditText
            style="@style/FormTheme"
            android:hint="@string/word_hint"
            android:background="#FF4444"
            android:id="@+id/wordBox"/>
        <TextView
            style="@style/SpacerTheme"
            android:background="#CC0000"/>
        <Button
            style="@style/ButtonTheme"
            android:text="@string/send_botton"
            android:background="@drawable/buttonblue"
            android:id="@+id/sendButton"/>
        <TextView
            style="@style/SpacerTheme"
            android:background="#0099CC"/>
    </LinearLayout>
</ScrollView>